finana - fix valuation bug